test/test_examples/syntactic_examples/syntax_error/error_statement_07.zig
// Syntax error: missing semicolon after "ifj" function call

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    ifj.write("hello")
}